Update portfolio content

--- a/index.html
+++ b/index.html
@@ -1,35 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nethra A | Flutter Developer</title>
+  <title>Nethra A | Flutter Developer (Mobile & Web)</title>
 </head>
-<body style="font-family: Arial; max-width: 900px; margin: auto; padding: 20px;">
+<body style="font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 30px; line-height: 1.6;">
+
   <h1>Nethra A</h1>
-  <p>Flutter Developer | Mobile & Web | Firebase | Open to Hybrid & Remote</p>
+  <p><strong>Flutter Developer (Mobile & Web)</strong> | Firebase | Business Apps | Open to Hybrid & Remote</p>
+
+  <hr>
 
   <h2>About Me</h2>
   <p>
-    I build Flutter mobile and web applications, internal business tools,
-    and dashboards using Firebase and clean UI architecture.
-    I focus on usability, performance, and real-world problem solving.
+    I am a Flutter developer specializing in building mobile and web applications, 
+    internal business tools, and operational dashboards using Firebase and clean, scalable UI architecture.
+    I focus on performance, usability, and delivering real-world solutions that improve business workflows.
   </p>
 
   <h2>Projects</h2>
 
   <h3>Meeting Room Booking App</h3>
-  <p>Flutter app for managing meeting room availability, bookings, and user authentication.</p>
-  <p><em>GitHub link will be added here</em></p>
+  <p>
+    A Flutter-based mobile and web application for managing meeting room availability, 
+    real-time bookings, and secure user authentication. Designed for internal company operations
+    with role-based access and admin controls.
+  </p>
+  <p><strong>GitHub Repo:</strong> <em>Coming soon</em></p>
 
-  <h3>Attendance Dashboard</h3>
-  <p>Flutter web dashboard for monitoring employee attendance and device status with KPI cards and filters.</p>
-  <p><em>GitHub link will be added here</em></p>
+  <h3>Attendance & Device Monitoring Dashboard</h3>
+  <p>
+    A Flutter web dashboard that tracks employee attendance and biometric device status.
+    Features KPI cards, live status filters, and structured data views for HR and IT operations.
+  </p>
+  <p><strong>GitHub Repo:</strong> <em>Coming soon</em></p>
 
-  <h3>FlutterFlow Business App</h3>
-  <p>Business app built using FlutterFlow with Firebase backend and admin approval flow.</p>
-  <p><em>GitHub link will be added here</em></p>
+  <h3>FlutterFlow Business Workflow App</h3>
+  <p>
+    A business application built using FlutterFlow and Firebase, featuring login authentication,
+    admin approval flows, and structured form submissions for internal process automation.
+  </p>
+  <p><strong>GitHub Repo:</strong> <em>Coming soon</em></p>
 
   <h2>Contact</h2>
-  <p>Email: your-email@gmail.com</p>
-  <p>LinkedIn: linkedin.com/in/YOUR_USERNAME</p>
+  <p><strong>Email:</strong> nethra.a.dev@gmail.com</p>
+  <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/nethra-nekar-ab2494259/" target="_blank">linkedin.com/in/nethra-nekar-ab2494259</a></p>
+  <p><strong>GitHub:</strong> <a href="https://github.com/nethranekar-dev" target="_blank">github.com/nethranekar-dev</a></p>
+
 </body>
 </html>
+
