Upgrade portfolio branding and project descriptions

--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nethra A | Flutter Developer (Mobile & Web)</title>
+  <title>Nethra A | Flutter & FlutterFlow Developer | Mobile & Web Apps</title>
 </head>
 <body style="font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 30px; line-height: 1.6;">
 
   <h1>Nethra A</h1>
-  <p><strong>Flutter Developer (Mobile & Web)</strong> | Firebase | Business Apps | Open to Hybrid & Remote</p>
+  <p>
+    <strong>Flutter & FlutterFlow Developer (Mobile, Web & Business Apps)</strong> 
+    | Firebase | REST APIs | Open to Hybrid & Remote
+  </p>
 
   <hr>
 
   <h2>About Me</h2>
   <p>
-    I am a Flutter developer specializing in building mobile and web applications, 
-    internal business tools, and operational dashboards using Firebase and clean, scalable UI architecture.
-    I focus on performance, usability, and delivering real-world solutions that improve business workflows.
+    I am a Flutter & FlutterFlow developer specializing in building production-ready mobile and web applications,
+    internal business tools, and admin dashboards using Firebase and scalable UI architecture.
+    I focus on performance optimization, clean code structure, and delivering real-world solutions
+    that improve business workflows and user experience.
   </p>
 
   <h2>Projects</h2>
 
   <h3>Meeting Room Booking App</h3>
   <p>
-    A Flutter-based mobile and web application for managing meeting room availability, 
+    A Flutter-based mobile and web application for managing meeting room availability,
     real-time bookings, and secure user authentication. Designed for internal company operations
     with role-based access and admin controls.
   </p>
@@ -43,9 +47,18 @@
 
   <h2>Contact</h2>
   <p><strong>Email:</strong> nethra.a.dev@gmail.com</p>
-  <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/nethra-nekar-ab2494259/" target="_blank">linkedin.com/in/nethra-nekar-ab2494259</a></p>
-  <p><strong>GitHub:</strong> <a href="https://github.com/nethranekar-dev" target="_blank">github.com/nethranekar-dev</a></p>
+  <p>
+    <strong>LinkedIn:</strong> 
+    <a href="https://www.linkedin.com/in/nethra-nekar-ab2494259/" target="_blank">
+      linkedin.com/in/nethra-nekar-ab2494259
+    </a>
+  </p>
+  <p>
+    <strong>GitHub:</strong> 
+    <a href="https://github.com/nethranekar-dev" target="_blank">
+      github.com/nethranekar-dev
+    </a>
+  </p>
 
 </body>
 </html>
-
