--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nethra A | Flutter & FlutterFlow Developer | Mobile & Web Apps</title>
+  <title>Nethra Nekar | Flutter & FlutterFlow Developer | Mobile & Web Apps</title>
 </head>
 <body style="font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 30px; line-height: 1.6;">
 
@@ -21,6 +21,17 @@
     that improve business workflows and user experience.
   </p>
 
+  <!-- Skills Section -->
+  <h2>Skills</h2>
+  <ul>
+    <li>Flutter (Mobile & Web)</li>
+    <li>FlutterFlow</li>
+    <li>Firebase (Auth, Firestore, Storage)</li>
+    <li>REST APIs Integration</li>
+    <li>Responsive UI & Clean Architecture</li>
+    <li>Admin Dashboards & Business Apps</li>
+  </ul>
+
   <h2>Projects</h2>
 
   <h3>Meeting Room Booking App</h3>
@@ -29,21 +40,21 @@
     real-time bookings, and secure user authentication. Designed for internal company operations
     with role-based access and admin controls.
   </p>
-  <p><strong>GitHub Repo:</strong> <em>Coming soon</em></p>
+  <p><strong>GitHub Repo:</strong> <em>Private (Available on request)</em></p>
 
   <h3>Attendance & Device Monitoring Dashboard</h3>
   <p>
     A Flutter web dashboard that tracks employee attendance and biometric device status.
     Features KPI cards, live status filters, and structured data views for HR and IT operations.
   </p>
-  <p><strong>GitHub Repo:</strong> <em>Coming soon</em></p>
+  <p><strong>GitHub Repo:</strong> <em>Private (Available on request)</em></p>
 
   <h3>FlutterFlow Business Workflow App</h3>
   <p>
     A business application built using FlutterFlow and Firebase, featuring login authentication,
     admin approval flows, and structured form submissions for internal process automation.
   </p>
-  <p><strong>GitHub Repo:</strong> <em>Coming soon</em></p>
+  <p><strong>GitHub Repo:</strong> <em>Private (Available on request)</em></p>
 
   <h2>Contact</h2>
   <p><strong>Email:</strong> nethra.a.dev@gmail.com</p>
@@ -58,6 +69,11 @@
     <a href="https://github.com/nethranekar-dev" target="_blank">
       github.com/nethranekar-dev
     </a>
+  </p>
+
+  <hr>
+  <p style="text-align:center;">
+    © 2026 Nethra A — Flutter & FlutterFlow Developer
   </p>
 
 </body>
